# TDD_PROJECT

./: pyproject.toml
store/: main.py
store/schemas/: base.py
store/usecases/: product.py
